--- a/sync/package.json
+++ b/sync/package.json
@@ -25,6 +25,14 @@
     "@ionic-native/file": "^5.35.0",
     "@ionic-native/zip": "^5.35.0",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova.plugin.couchbaselite": "git+https://github.com/rajagp/couchbase-lite-cordova-plugin-android.git",
+    "node-properties-parser": "0.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -46,7 +54,7 @@
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
     "cordova-android": "^9.1.0",
-    "cordova-plugin-camera": "^5.0.2",
+    "cordova-plugin-camera": "^5.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -85,7 +93,8 @@
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-zip": {}
+      "cordova-plugin-zip": {},
+      "cordova.plugin.couchbaselite": {}
     },
     "platforms": [
       "android"
