--- a/sync/package.json
+++ b/sync/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/file": "^5.35.0",
     "@ionic-native/zip": "^5.35.0",
     "@ionic/angular": "^5.5.2",
+    "cordova-android": "9.1.0",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^4.0.0",
@@ -53,7 +54,6 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
-    "cordova-android": "^9.1.0",
     "cordova-plugin-camera": "^5.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.2",
